# TeamSyncAI

./: .env  README.md  chat.txt  main.py  pyproject.toml  rag_agent.py  read_chat.py  requirements.txt  test.py  test_parser.py
backend/app/: main.py
backend/app/routers/: file_upload.py  llm_agent.py
chroma_db/: chroma.sqlite3
frontend/: package-lock.json
frontend/first-project/src/: NEWFILE.JS
